--- a/css/styles.css
+++ b/css/styles.css
@@ -527,7 +527,7 @@ a {
   flex-basis: 100%;
 }
 
-@media (min-width: 768px) {
+@media ((min-width: 768px)) {
   .container {
     max-width: 1400px;
     display: block;
