--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,6 +1,6 @@
 * {
     font-family: 'Lato', sans-serif;
-    color: #777;
+    color: $color-gray;
     box-sizing: border-box;
   }
   
@@ -13,13 +13,13 @@
   }
 
   .headline-primary {
-    color: #58e1c1;
+    color: $color-highlight;
     margin-left: 10px;
   }
   
   .headline-secondary {
     font-weight: 300;
-    color: #777;
+    color: $color-gray;
   }
   
   .link {
@@ -33,6 +33,6 @@
     font-style: italic;
     margin-left: 20px;
     padding-left: 20px;
-    border-left: 8px solid #58e1c1;
+    border-left: 8px solid $color-highlight;
     border-radius: 5px;
   }
