--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -17,43 +17,43 @@
   }
   
   .theme.col-1 {
-    background-color: #927bc1;
+    background-color: $color-info;
   }
   
   .theme.col-2 {
-    background-color: #fd7856;
+    background-color: $color-warning;
   }
   
   .theme.col-3 {
-    background-color: #deb2ee;
+    background-color: $color-col-3;
   }
   
   .theme.col-4 {
-    background-color: #7ee6fd;
+    background-color: $color-col-4;
   }
   
   .theme.col-5 {
-    background-color: #88d9a0;
+    background-color: $color-col-5;
   }
   
   .theme.col-6 {
-    background-color: #4da2bb;
+    background-color: $color-col-6;
   }
   
   .theme.col-7 {
-    background-color: #ec9fa3;
+    background-color: $color-col-7;
   }
   
   .theme.col-8 {
-    background-color: #fd9f85;
+    background-color: $color-col-8;
   }
   
   .theme.col-9 {
-    background-color: #e4757a;
+    background-color: $color-error;
   }
   
   .theme.col-10 {
-    background-color: #63cc82;
+    background-color: $color-success;
   }
   
   .theme.col-11 {
@@ -61,7 +61,7 @@
   }
   
   .theme.col-12 {
-    background-color: #80e8d1;
+    background-color: $color-col-12;
   }
   
   .card {
