--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,9 +1,21 @@
 // Colors
+$color-white: #fff;
+$color-gray: #777;
+
 $color-default: #51ddfc;
 $color-success: #63cc82;
 $color-error: #e4757a;
 $color-warning: #fd7856;
 $color-info: #927bc1;
+$color-highlight: #58e1c1;
+
+$color-col-3: #deb2ee;
+$color-col-4: #7ee6fd;
+$color-col-5: #88d9a0;
+$color-col-6: #4da2bb;
+$color-col-7: #ec9fa3;
+$color-col-8: #fd9f85;
+$color-col-12: #80e8d1;
 
 //Media Query Breakpoints
 
